Version 6.1.0 (Not save-compatible)

* Added a Colony Crisis for the Adversary faction
  - Requires one size 6 colony or at least 4 colonies with one being at least size 5 for the crisis to (normally) appear
* Adjusted Adversary configs:
  - Now uses the new 0.97a character portraits
  - Now knows the Escort Package hullmod, and no longer knows the Neural Link hullmods
* Adjusted some MagicBounty ship variants and commander skills



Version 6.0.0 (Update for Starsector 0.97)

* Updated to Starsector 0.97
* Added Grendel to Adversary's known ship list



Version 5.2.1

* MagicBounty changes:
  - Changed ship loadouts and officer skills for most MagicBounties in preparation of Starsector 0.97
  - Added [REDACTED PLUS] prerequisite for two [VERY REDACTED] Silly bounties
  - The Silly station bounties now have far fewer fleetwide skills; to compensate, the stations spawn a fleet of additional ships to support them
  - Some adjustments to rewards and bounty spawn locations
* Updated Adversary's Exotica configs to include Quick Jets
* HOTFIX: Fixed Tri-Tachyon bounty not appearing due to incorrect ship variant



Version 5.2.0 (Not save-compatible)

* Fixed the LunaLib soft dependency
  - This means this mod no longer requires either LunaLib or Java 8 to run
* Removed "fleetDoctrine" and "shipSize" options for Adversary's Dynamic Doctrine
  - This is done as these options are barely used by default and can conflict with mods that dynamically increase NPC faction strength
* Made officers in a certain Silly bounty count as sleeper officers
* Added voices to the Adversary for more consistent dialogue